[package]
name = "assme2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
wasmer = "3.1.1"
ethers = { version = "1.0.2", features = ["rustls"] }
rocksdb = "0.20.1"
